--- a/AnimeOp&EdQuiz2/AndroidManifest.xml
+++ b/AnimeOp&EdQuiz2/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.animeopedquiz2"
+    package="com.gobi.animeopedquiz2"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="19" />  
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
@@ -14,8 +14,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.animeopedquiz2.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.gobi.animeopedquiz2.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,20 +24,26 @@
             </intent-filter>
         </activity>
         
-        <activity android:name=".LevelActivity"  
-            android:parentActivityName="com.example.animeopedquiz2.MainActivity" 
-            android:label="@string/levelTitle">     
+        <activity
+            android:name="com.gobi.animeopedquiz2.LevelActivity"
+            android:label="@string/levelTitle"
+            android:parentActivityName="com.gobi.animeopedquiz2.MainActivity"
+            android:screenOrientation="portrait" >
         </activity>
         
-         <activity android:name=".MusicSelection"  
-          android:parentActivityName=".LevelActivity" 
-            android:label="@string/musicSelect">
-            </activity>
-            
-           <activity android:name=".MusicPlayActivity"  
-          android:parentActivityName=".MusicSelection" 
-          android:label="@string/musicPlayActivity">
-            </activity>
+        <activity
+            android:name="com.gobi.animeopedquiz2.MusicSelection"
+            android:label="@string/musicSelect"
+            android:parentActivityName="com.gobi.animeopedquiz2.LevelActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        
+        <activity
+            android:name="com.gobi.animeopedquiz2.MusicPlayActivity"
+            android:label="@string/musicPlayActivity"
+            android:parentActivityName="com.gobi.animeopedquiz2.MusicSelection"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
